--- a/index.html
+++ b/index.html
@@ -279,29 +279,21 @@
           <div class="agent-avatar">
             <i class="fas fa-user"></i>
           </div>
-          <h3>Albin Sköld</h3>
-          <p data-i18n="contact.agent">Ansvarig fastighetsmäklare</p>
+          <h3>Raymond Tress</h3>
+          <p data-i18n="contact.agent">Ägare</p>
 
           <div class="agent-details">
             <p>
-              <i class="fas fa-building"></i>
-              <span data-i18n="contact.office">Mäklarhuset Vetlanda</span>
-            </p>
-            <p>
               <i class="fas fa-map-marker-alt"></i>
-              <span data-i18n="contact.address">Storgatan 7 D, 574 32 Vetlanda</span>
+              <span data-i18n="contact.address">Malmvägen 1. 57 454 Holsbybrunn</span>
             </p>
             <p>
               <i class="fas fa-phone"></i>
-              <span data-i18n="contact.phone">Telefon</span>: 0383-180 93
-            </p>
-            <p>
-              <i class="fas fa-mobile-alt"></i>
-              <span data-i18n="contact.mobile">Mobil</span>: 070-971 28 64
+              <span data-i18n="contact.phone">Telefon</span>: +46 767763600
             </p>
             <p>
               <i class="fas fa-envelope"></i>
-              <span data-i18n="contact.email">E-post</span>: albin.skold@maklarhuset.se
+              <span data-i18n="contact.email">E-post</span>: raytress@me.com
             </p>
           </div>
         </div>
@@ -332,9 +324,9 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-content">
-        <div class="footer-brand">Mäklarhuset</div>
-        <p data-i18n="footer.broker">Förmedlas av Mäklarhuset</p>
-        <p>© 2024 Mäklarhuset. <span data-i18n="footer.rights">Alla rättigheter förbehållna</span></p>
+        <div class="footer-brand">Raymond Tress, Anita Hazekamp Tress</div>
+        <p data-i18n="footer.broker">Wir freuen uns auf Ihr Angebot</p>
+        <p>© 2026-, Ädelfors Consult AB</p>
       </div>
     </div>
   </footer>
